fixing input zoom in on mobile issue pt.2

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,6 @@ body {
   }
 }
 
-.p-component input {
-  font-size: 1rem;
+.p-paginator-current {
+  font-size: .875rem;
 }
