--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -61,7 +61,6 @@
 }
 
 .p-component {
-  font-size: .875rem;
   font-weight: normal;
   width: 100%;
 }
